# pypuyo_cppai

./: AI.cpp  AI.hpp  CMakeLists.txt  CellType.hpp  ChainInfo.hpp  Field.cpp  Field.hpp  README.md  bindings.cpp  main.py  test_puyo_core.py
src/: AI.cpp  AI.hpp  AIContext.hpp  Field.cpp  Field.hpp  InitRuleBaseAI.cpp  InitRuleBaseAI.hpp  RandomAI.cpp  RandomAI.hpp  bindings.cpp
tests/: test_puyo_core.py
